# cmake_example

./: CMakeLists.txt  clean_cmake.sh
extern_modules/: Findjsoncpp.cmake
src/: CMakeLists.txt  test.cc
src/foo/: foo.cc  foo.h
src/libfoo/: CMakeLists.txt  libfoo.cc  libfoo.h
